# AOC2024

./: .gitignore  pyproject.toml  scratch.py
AOC/days/1/: day1.py
AOC/days/10/: day10.py
AOC/days/11/: day11.py
AOC/days/12/: day12.py
AOC/days/13/: day13.py
AOC/days/14/: day14.py
AOC/days/15/: day15.py
AOC/days/16/: day16.py
AOC/days/17/: solution.py
AOC/days/18/: solution.py
AOC/days/19/: solution.py
AOC/days/2/: day2.py
AOC/days/20/: solution.py
AOC/days/22/: solution.py
AOC/days/23/: solution.py
AOC/days/24/: solution.py
AOC/days/3/: day3.py
AOC/days/4/: day4.py
AOC/days/5/: day5.py  day5_long.py
AOC/days/6/: day6.py
AOC/days/7/: day7.py
AOC/days/8/: day8.py
AOC/days/9/: day9.py
AOC/helpers/: __init__.py
